--- a/pages/schoolNav/schoolNav.wxml
+++ b/pages/schoolNav/schoolNav.wxml
@@ -8,6 +8,9 @@
     <map id="navi_map" longitude="{{userLongitude}}" latitude="{{userLatitude}}" scale="18" markers="{{markers}}" polyline="{{polyline}}" bindmarkertap="makertap" style='width:100%' show-location subkey="JLHBZ-JQELU-I7HVD-B2XSN-5VU3Z-BZFDK" enable-3D="true"
       show-compass>
       <cover-view class="controls {{fullscreen ? 'full' : ''}}">
+        <cover-view bindtap="jtt">
+          <cover-image class="img" src="/images/nav/staticMap.png" />
+        </cover-view>
         <cover-view bindtap="moveSchool">
           <cover-image class="img" src="/images/nav/moveSchool.png" />
         </cover-view>
@@ -25,6 +28,5 @@
   <view class="text_box" wx:else>
     <view class="text">北京科技大学天津学院</view>
     <view class="text">天津市宝坻区京津新城珠江北环东路1号(邮编：301830)</view>
-    <view class="detail_button" bindtouchstart="jtt">静态图</view>
   </view>
 </view>
