--- a/pages/bookSearch/bookInfo/bookInfo.wxml
+++ b/pages/bookSearch/bookInfo/bookInfo.wxml
@@ -47,8 +47,8 @@
         </view>
       </view>
       <view class="weui-panel__ft">
-        <view class="weui-cell weui-cell_access weui-cell_link">
-          <view class="weui-cell__bd">{{jsonStr[0][3]}}</view>
+        <view class="weui-cell weui-cell_access weui-cell_link"  bindtap='goLibrary' data-place="{{jsonStr[0][3]}}">
+          <view class="weui-cell__bd">📍{{jsonStr[0][3]}}</view>
         </view>
       </view>
     </view>
@@ -70,6 +70,6 @@
       <navigator url="/pages/features/about" class="weui-footer__link">Airmole.</navigator>
       <navigator url="/pages/features/about" class="weui-footer__link">智慧校园</navigator>
     </view>
-    <view class="weui-footer__text">Copyright © 2018 北京科技大学天津学院.</view>
+    <view class="weui-footer__text">Copyright © 2019 北京科技大学天津学院.</view>
   </view>
 </page>
