--- a/pages/Transport/Transport.wxml
+++ b/pages/Transport/Transport.wxml
@@ -48,7 +48,7 @@
               </view>
               <view class="weui-form-preview__item">
                 <view class="weui-form-preview__label">购票、乘车地点</view>
-                <view class="weui-form-preview__value">京津新城公交站</view>
+                <view class="weui-form-preview__value" bindtap='goJJXCStation'>📍京津新城公交站</view>
               </view>
             </view>
           </view>
@@ -74,7 +74,7 @@
               </view>
               <view class="weui-form-preview__item">
                 <view class="weui-form-preview__label">乘车地点</view>
-                <view class="weui-form-preview__value">建国路南三环东国贸桥下艾维克酒店西门路边(到站后买票)</view>
+                <view class="weui-form-preview__value" bindtap='goBJGMStation'>📍建国路南三环东国贸桥下艾维克酒店西门路边(到站后买票)</view>
               </view>
             </view>
           </view>
