--- a/pages/bookSearch/index.wxml
+++ b/pages/bookSearch/index.wxml
@@ -64,7 +64,7 @@
         <view class="book-intro raduis">
           <view class="remind-box">
             <image class="noDisplay" src="/images/holiday.png"></image>
-            <text class="remind-text">教务网关了，机智的小盒子帮您缓存了课表到手机</text>
+            <text class="remind-text">教务系统更换，暂无课表(可继续看缓存课表)</text>
           </view>
         </view>
       </view>
