--- a/pages/score/score.wxml
+++ b/pages/score/score.wxml
@@ -11,7 +11,7 @@
       <canvas canvas-id="lineCanvas" disable-scroll="true" bindtouchstart="touchHandler" style='width:100%;height:200px;'></canvas>
     </view>
   </view>
-  <view class="score__hd" wx:if="{{jsonContent.data}}">
+  <view class="score__hd" wx:if="{{jsonContent}}">
     <button class="clear" open-type='share'>
       <view class="weui-item border-shadow background-1">
         <view class="weui-flex">
@@ -26,14 +26,14 @@
       </view>
     </button>
   </view>
-  <block wx:for="{{jsonContent.data}}" wx:key="scoolYear">
+  <block wx:for="{{jsonContent}}" wx:key="scoolYear" wx:for-index="semester">
     <view class="page__bd" style='background-color:#fff;border-radius:15px;padding-bottom:20px;'>
-      <view class="weui-cells__title">{{item.time.schoolYear}}学年 第{{item.time.semester}}学期</view>
+      <view class="weui-cells__title">{{semester}}学期</view>
       <view class="weui-cells weui-cells_after-title">
         <view wx:for="{{item.score}}" wx:key="ClassName" class="weui-cell">
-          <view class="weui-cell__bd">{{item.courseName}}\r\n
+          <view class="weui-cell__bd">{{item.className}}({{item.classType}})\r\n
             <view class="page__desc">
-              授课教师：{{item.tearcher}} {{item.period}}学时 {{item.credit}}学分
+              {{item.examType}} {{item.period}}学时 {{item.credit}}学分
             </view>
           </view>
           <view class="weui-cell__ft" style='color:red;' wx:if="{{item.score<60}}">{{item.score}}</view>
