去学院官方化

--- a/pages/features/about.wxml
+++ b/pages/features/about.wxml
@@ -28,9 +28,9 @@
 
   <view class="footer">
     <view class="footer-beingshawn">
-      <text>Airmole.|冰炫互联</text>
+      <text>Airmole.</text>
     </view>
-    <text>北京科技大学天津学院网络中心</text>
+    <text>贝壳小盒子(ShellBox)</text>
     <text>Copyright @ 2019 All Rights Reserved</text>
   </view>
 </view>
