--- a/pages/tel/tel.wxml
+++ b/pages/tel/tel.wxml
@@ -31,8 +31,7 @@
   <view class="weui-footer">
     <view class="weui-footer__links">
       <navigator url="/pages/features/about" class="weui-footer__link">Airmole.</navigator>
-      <navigator url="/pages/features/about" class="weui-footer__link">智慧校园</navigator>
     </view>
-    <view class="weui-footer__text">Copyright © 2018 北京科技大学天津学院.</view>
+    <view class="weui-footer__text">Copyright © 2019 贝壳小盒子(ShellBox)</view>
   </view>
 </view>
