--- a/pages/calendar/calendar.wxml
+++ b/pages/calendar/calendar.wxml
@@ -140,9 +140,8 @@
     <view class="weui-footer" style='margin-top:25px;'>
       <view class="weui-footer__links">
         <navigator url="/pages/features/about" class="weui-footer__link">Airmole.</navigator>
-        <navigator url="/pages/features/about" class="weui-footer__link">智慧校园</navigator>
       </view>
-      <view class="weui-footer__text">Copyright © 2019 北京科技大学天津学院.</view>
+      <view class="weui-footer__text">Copyright © 2019 贝壳小盒子(ShellBox)</view>
     </view>
 
   </view>
