--- a/pages/score/score.wxml
+++ b/pages/score/score.wxml
@@ -58,6 +58,6 @@
       <text class="weui-footer__link">很奔放</text>
       <text class="weui-footer__link">Airmole.</text>
     </view>
-    <view class="weui-footer__text">Copyright © 2017-2018 北科大天津学院智慧校园.</view>
+     <view class="weui-footer__text">Copyright © 2019 贝壳小盒子(ShellBox)</view>
   </view>
 </view>
