--- a/pages/score/score.wxml
+++ b/pages/score/score.wxml
@@ -11,7 +11,7 @@
       <canvas canvas-id="lineCanvas" disable-scroll="true" bindtouchstart="touchHandler" style='width:100%;height:200px;'></canvas>
     </view>
   </view>
-  <view class="score__hd" wx:if="{{jsonContent}}">
+  <!-- <view class="score__hd" wx:if="{{jsonContent}}">
     <button class="clear" open-type='share'>
       <view class="weui-item border-shadow background-1">
         <view class="weui-flex">
@@ -25,7 +25,7 @@
         </view>
       </view>
     </button>
-  </view>
+  </view> -->
   <block wx:for="{{jsonContent}}" wx:key="scoolYear" wx:for-index="semester">
     <view class="page__bd" style='background-color:#fff;border-radius:15px;padding-bottom:20px;'>
       <view class="weui-cells__title">{{semester}}学期</view>
@@ -58,6 +58,6 @@
       <text class="weui-footer__link">很奔放</text>
       <text class="weui-footer__link">Airmole.</text>
     </view>
-     <view class="weui-footer__text">Copyright © 2019 贝壳小盒子(ShellBox)</view>
+    <view class="weui-footer__text">Copyright © 2019 贝壳小盒子(ShellBox)</view>
   </view>
 </view>
